# clinicavidah

./: .replit  DOWNLOAD_E_INSTALACAO.md  INSTALACAO_RAPIDA.txt  README_MODULAR.md  SISTEMA_FINAL_README.md  analise_100_score.py  app.py  app_final.py  app_fixed.py  app_modular.py  app_modular_fixed.py  app_working.py  auth_simple.py  auth_simple_broken.py  backup_sistema_completo.py  config.py  cookies.txt  cookies_debug.txt  cookies_final.txt  cookies_medico.txt  cookies_test.txt  correcao_100_percent_final.py  correcao_acesso_banco_completa.py  correcao_badges_completa_final.py  correcao_badges_medicos_final.py  correcao_completa_badges_clones.py  correcao_completa_sistema.py  correcao_dashboard_final.py  correcao_final_100_score.py  correcao_final_badges.py  correcao_integracao_postgresql_completa.py  correcao_pdf_completa.py  correcao_redirecionamentos.py  correcoes_finais_100.py  correcoes_finais_100_percent.py  correções_finais_100.py  corrigir_badges_definitivo.py  corrigir_para_100_percent.py  corrigir_sintaxe_urgente.py  corrigir_sistema_completo.py  (+39 more)
attached_assets/: Pasted-Vamos-criar-mais-3-icones-que-ficarao-abaixo-de-novo-paciente-nova-receita-e-exames-de-imagem-O-nom-1748966140451.txt  Pasted-Vamos-l-preciso-que-fa-a-o-sistema-voltar-a-funcionar-100-1-dashboard-veja-se-todos-cones-est-1749062995986.txt  medicamentos_200_reais 2_1749065635366.csv
backups/: backup_20250603_201839.sql  backup_20250603_230456.sql  backup_20250603_231246.sql  backup_20250603_231446.sql  backup_20250604_100058.sql
blueprints/: __init__.py  auth.py  auth_fixed.py  dashboard.py  (+2 more)
(+158 files in other folders)
