[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "weasyprint>=65.1",
    "wtforms>=3.2.1",
    "trafilatura>=2.0.0",
    "psutil>=7.0.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.4",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
]
